fix overflowing code and images, fix prod build routing

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,6 @@ html {
   box-sizing: border-box;
 }
 
+img{
+  max-width: 100%;
+}
